[gd_scene load_steps=4 format=3 uid="uid://dbnwk1sjyjngp"]

[ext_resource type="Script" uid="uid://4karp4wjuj7q" path="res://Scripts/HUD/hud.gd" id="1_xiwd3"]
[ext_resource type="PackedScene" uid="uid://bycx5btccname" path="res://Cenas/HUD/menu_de_pausa.tscn" id="2_0bjgd"]
[ext_resource type="LabelSettings" uid="uid://451o6h7f5dwi" path="res://Cenas/HUD/hud_label_settings.tres" id="2_f148t"]

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xiwd3")

[node name="menu_de_pausa" parent="." instance=ExtResource("2_0bjgd")]

[node name="texture_rect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 122.0
offset_right = 153.0
offset_bottom = 250.0

[node name="temporizador" type="Timer" parent="."]
autostart = true

[node name="timer_label" type="Label" parent="."]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 208.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 5
text = "Timer: "
label_settings = ExtResource("2_f148t")

[node name="timer_counter" type="Label" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 32.0
offset_right = 292.0
offset_bottom = 64.0
text = "00:00"
label_settings = ExtResource("2_f148t")

[node name="botao_pause" type="Button" parent="."]
layout_mode = 0
offset_left = 1072.0
offset_top = 24.0
offset_right = 1112.0
offset_bottom = 77.0
text = "I I"

[connection signal="timeout" from="temporizador" to="." method="_on_temporizador_timeout"]
[connection signal="pressed" from="botao_pause" to="." method="_on_botao_pause_pressed"]
